# ade

./: .bazelrc  CONTRIBUTING.md  README.md
.buildkite/: pipeline.yml
.ctx/exec-plans/work-ade-platform-end-to-end/: architecture_reviews.md  exec_plan.md  manager_changelog.md  sdlc_reviews.md  security_reviews.md  test_coverage_reviews.md  ui_artifact_reviews.md  validation_log.md
.ctx/exec-plans/work-inspector-full-suite/: implementation_status.md
.ctx/exec-plans/work-observability-legibility/: implementation_status.md
core/apps/web/: playwright.shared.ts  vite.config.ts
core/apps/web/e2e/: README.md  diagnostics-bundle-schema.spec.ts  visual-work-inspector.spec.ts  visual-workbench-templates.spec.ts  workbench-pretext-parity-corpus.spec.ts  workbench-reported-assistant-parity.spec.ts
core/crates/ctx-core/src/: ids.rs  redaction.rs
core/crates/ctx-http/: BUILD.bazel
core/crates/ctx-http/src/: agent_work_cli.rs  cli.rs  logging.rs  main.rs  plugin_cli.rs
core/crates/ctx-update-service/: Cargo.toml
core/crates/ctx-update-service/src/: lib.rs
core/scripts/lib/: cache_roots.cjs
docs/: README.md  acp-provider-plugin-contract.mdx  plugin-contribution-contract.mdx  work-ade-extension-decisions.mdx  work-namespace-compatibility.mdx  work-records.mdx  work-source-of-truth-contract.mdx
docs/blog/: open-sourcing-ctx.mdx  the-fermai-paradox.mdx
docs/examples/: work-observability-e2e.md
docs/getting-started/: install-and-launch.mdx
docs/legal/: privacy-policy.mdx
docs/settings/: data-and-privacy.mdx  updating-app.mdx
(+129 files in other folders)
