[package]
name = "ctx-update-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
blake2 = "0.10"
chrono.workspace = true
ed25519-dalek = "2"
reqwest.workspace = true
semver = "1"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
hex = "0.4"
tokio.workspace = true
